# agent-first-data

./: .gitignore  LICENSE  README.md  spore.core.json
.github/workflows/: ci.yml
go/: README.md  afd.go  afd_logging.go  afd_logging_test.go  afd_test.go  afdata.go  afdata_cli.go  afdata_cli_test.go  afdata_logging.go  afdata_logging_test.go  afdata_test.go  go.mod  no_stderr_policy_test.go  version.go
go/examples/agent_cli/: main.go  main_test.go
python/: .gitignore  README.md  pyproject.toml
python/agent_first_data/: __init__.py  afd_logging.py  afdata_logging.py  cli.py  format.py
python/examples/: agent_cli.py
python/tests/: test_afd_logging.py  test_afdata_logging.py  test_cli.py  test_format.py  test_no_stderr_policy.py
rust/: Cargo.toml  README.md  clippy.toml
rust/examples/: agent_cli.rs
rust/src/: afd_tracing.rs  afdata_tracing.rs  lib.rs  tests.rs
scripts/: test.sh  update.sh  upgrade.sh
skills/: agent-first-data.md
spec/: agent-first-data.md
spec/fixtures/: exact.json  helpers.json  output_formats.json  plain.json  protocol.json  redact.json  yaml.json
typescript/: README.md  package-lock.json  package.json
typescript/examples/: agent_cli.ts
typescript/src/: afd_logging.test.ts  afd_logging.ts  afdata_logging.test.ts  afdata_logging.ts  cli.test.ts  cli.ts  format.test.ts  format.ts  index.ts  no_stderr_policy.test.ts
