[project]
name = "agent-first-data"
version = "0.1.0"
description = "Agent-First Data (AFD) — suffix-driven output formatting and protocol templates for AI agents"
license = "MIT"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
