[project]
name = "agent-first-data"
version = "0.1.2"
description = "Agent-First Data (AFD) — suffix-driven output formatting and protocol templates for AI agents"
license = "MIT"
requires-python = ">=3.9"

[project.urls]
Repository = "https://github.com/cmnspore/agent-first-data"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
