[project]
name = "agent-first-data"
version = "0.4.1"
description = "Agent-First Data (AFDATA) — suffix-driven output formatting and protocol templates for AI agents"
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.urls]
Repository = "https://github.com/cmnspore/agent-first-data"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
